# ai_novel_gen

./: LICENSE  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt
backend/: README.md  requirements.txt
backend/app/: main.py
frontend/: README.md  package-lock.json  package.json
frontend/.next/: trace
frontend/.next/cache/: config.json
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/pages/: index.js
frontend/.next/server/vendor-chunks/: @swc.js  next.js
frontend/.next/static/chunks/: _error.js  react-refresh.js  webpack.js
frontend/.next/static/chunks/pages/: index.js
frontend/.next/static/webpack/: webpack.1e64cbc6019a05e6.hot-update.js
frontend/pages/: index.tsx
tests/: test_footer.py
writer_bot/: __init__.py  __main__.py  constants.py  logger.py  state.py
